--- a/tiacademy/aula2/exercício/exercicio4.html
+++ b/tiacademy/aula2/exercício/exercicio4.html
@@ -9,9 +9,9 @@
 </head>
 
 <style>
-  div {
-    width: 100px;
-    height: 500px;
+  p {
+    width: 500px;
+    height: 100px;
     border-right: 1px solid black;
     border-left: 3px solid black;
 
@@ -22,7 +22,7 @@
 <body>
   <header></header>
   <main>
-    <div> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex provident cupiditate obcaecati nisi quam ipsam veritatis, dignissimos error repellat ducimus? Doloribus, autem placeat ducimus deserunt minima modi saepe rerum animi.</div>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex provident cupiditate obcaecati nisi quam ipsam veritatis, dignissimos error repellat ducimus? Doloribus, autem placeat ducimus deserunt minima modi saepe rerum animi.</p>
   </main>
   <footer></footer>
 
