Aula 14-Utilizando elemento NAV

--- a/tiacademy/aula13/index.html
+++ b/tiacademy/aula13/index.html
@@ -19,7 +19,18 @@
   <figure>
     <img src="img/pizza_com_molho_e_azeitonas.jpg" alt="pizza deliciosa da pizzaria da mama - pizza moda da casa " title="Pizza Moda da Casa">
     <figcaption>PIZZARIA DA MAMA MODA DA CASA - AS MELHORES PIZZAS</figcaption>
-
+  </figure>
+  <figure>
+    <img src="img/pizza_com_molho_e_azeitonas.jpg" alt="pizza deliciosa da pizzaria da mama - pizza moda da casa " title="Pizza Moda da Casa">
+    <figcaption>PIZZARIA DA MAMA MODA DA CASA - AS MELHORES PIZZAS</figcaption>
+  </figure>
+  <figure>
+    <img src="img/pizza_com_molho_e_azeitonas.jpg" alt="pizza deliciosa da pizzaria da mama - pizza moda da casa " title="Pizza Moda da Casa">
+    <figcaption>PIZZARIA DA MAMA MODA DA CASA - AS MELHORES PIZZAS</figcaption>
+  </figure>
+  <figure>
+    <img src="img/pizza_com_molho_e_azeitonas.jpg" alt="pizza deliciosa da pizzaria da mama - pizza moda da casa " title="Pizza Moda da Casa">
+    <figcaption>PIZZARIA DA MAMA MODA DA CASA - AS MELHORES PIZZAS</figcaption>
   </figure>
 
 </body>
