Aula 24 b - Inserindo imagens

--- a/aula24/index.html
+++ b/aula24/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>PIZZARIA DA MAMA</title>
 
@@ -13,13 +14,25 @@
 <body>
   <header class="flex" id="top-header">
     <h1 class="flex">PIZZARIA DA MAMA</h1>
-    <nav class="flex">
-      <ul class="flex">
-        <li class="flex"><a class="flex" href="#">Contato</a></li>
+    <nav id="menu" class="flex">
+      <ul id="list-menu" class="flex">
+        <li class="flex item"><a class="flex go" href="#"><span class="material-icons icons-list">
+              mail
+            </span>Contato</a></li>
       </ul>
     </nav>
   </header>
-  <main></main>
+  <main>
+    <section id="section-cards" class="flex">
+      <div class="flex card">
+        <figure>
+          <img src="img/pizza_massa_marguerita.jpg" alt="pizza da mama">
+        </figure>
+
+      </div>
+
+    </section>
+  </main>
   <footer></footer>
 </body>
 
