Aula 24 d - Projeto Final

--- a/aula24/index.html
+++ b/aula24/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arvo:ital@0;1&family=Barlow+Condensed&family=Josefin+Sans:wght@100&family=Poppins:wght@100&family=Prompt:wght@100&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <title>PIZZARIA DA MAMA</title>
 
@@ -45,9 +48,125 @@
           <input type="button" value="DELICIAR" clas="btn">
         </form>
       </div>
+
+      <div class="card">
+        <figure class="card-img-pizza">
+          <img class="img-pizza" src="img/pizza_massa_marguerita.jpg" alt="pizza da mama">
+        </figure>
+        <h2 class="sub-titulo-pizza">PIZZA NAPOLITANA</h2>
+
+        <form action="" name="controle-tamanho" class="flex formTamanhoPizza">
+          <label class="flex" for="p">P
+            <input type="radio" name="tamanho-pizza" id="p" value="p">
+          </label>
+          <label class="flex" for="m">
+            M
+            <input type="radio" name="tamanho-pizza" id="m" value="m">
+          </label>
+          <label class="flex" for="g">
+            G
+            <input type="radio" name="tamanho-pizza" id="g" value="g">
+          </label>
+          <input type="button" value="DELICIAR" clas="btn">
+        </form>
+      </div>
+
+      <div class="card">
+        <figure class="card-img-pizza">
+          <img class="img-pizza" src="img/pizza_massa_marguerita.jpg" alt="pizza da mama">
+        </figure>
+        <h2 class="sub-titulo-pizza">PIZZA NAPOLITANA</h2>
+
+        <form action="" name="controle-tamanho" class="flex formTamanhoPizza">
+          <label class="flex" for="p">P
+            <input type="radio" name="tamanho-pizza" id="p" value="p">
+          </label>
+          <label class="flex" for="m">
+            M
+            <input type="radio" name="tamanho-pizza" id="m" value="m">
+          </label>
+          <label class="flex" for="g">
+            G
+            <input type="radio" name="tamanho-pizza" id="g" value="g">
+          </label>
+          <input type="button" value="DELICIAR" clas="btn">
+        </form>
+      </div>
+
+      <div class="card">
+        <figure class="card-img-pizza">
+          <img class="img-pizza" src="img/pizza_massa_marguerita.jpg" alt="pizza da mama">
+        </figure>
+        <h2 class="sub-titulo-pizza">PIZZA NAPOLITANA</h2>
+
+        <form action="" name="controle-tamanho" class="flex formTamanhoPizza">
+          <label class="flex" for="p">P
+            <input type="radio" name="tamanho-pizza" id="p" value="p">
+          </label>
+          <label class="flex" for="m">
+            M
+            <input type="radio" name="tamanho-pizza" id="m" value="m">
+          </label>
+          <label class="flex" for="g">
+            G
+            <input type="radio" name="tamanho-pizza" id="g" value="g">
+          </label>
+          <input type="button" value="DELICIAR" clas="btn">
+        </form>
+      </div>
+
+      <div class="card">
+        <figure class="card-img-pizza">
+          <img class="img-pizza" src="img/pizza_massa_marguerita.jpg" alt="pizza da mama">
+        </figure>
+        <h2 class="sub-titulo-pizza">PIZZA NAPOLITANA</h2>
+
+        <form action="" name="controle-tamanho" class="flex formTamanhoPizza">
+          <label class="flex" for="p">P
+            <input type="radio" name="tamanho-pizza" id="p" value="p">
+          </label>
+          <label class="flex" for="m">
+            M
+            <input type="radio" name="tamanho-pizza" id="m" value="m">
+          </label>
+          <label class="flex" for="g">
+            G
+            <input type="radio" name="tamanho-pizza" id="g" value="g">
+          </label>
+          <input type="button" value="DELICIAR" clas="btn">
+        </form>
+      </div>
+
+      <div class="card">
+        <figure class="card-img-pizza">
+          <img class="img-pizza" src="img/pizza_massa_marguerita.jpg" alt="pizza da mama">
+        </figure>
+        <h2 class="sub-titulo-pizza">PIZZA NAPOLITANA</h2>
+
+        <form action="" name="controle-tamanho" class="flex formTamanhoPizza">
+          <label class="flex" for="p">P
+            <input type="radio" name="tamanho-pizza" id="p" value="p">
+          </label>
+          <label class="flex" for="m">
+            M
+            <input type="radio" name="tamanho-pizza" id="m" value="m">
+          </label>
+          <label class="flex" for="g">
+            G
+            <input type="radio" name="tamanho-pizza" id="g" value="g">
+          </label>
+          <input type="button" value="DELICIAR" clas="btn">
+        </form>
+      </div>
     </section>
+
+
+
+
   </main>
-  <footer></footer>
+  <footer>
+    <h3>Pizzaria da Mama</h3>
+  </footer>
 </body>
 
 </html>
